--- a/main/css/main.css
+++ b/main/css/main.css
@@ -43,6 +43,45 @@ li {
   text-align: left;
   padding: 20px;
 }
+.down {
+  width: 50px;
+  height: 50px;
+  font-size: 50px;
+  cursor: pointer; 
+  position: absolute;
+  bottom: 10px;
+  animation-name: down;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+.down::after {
+  content: '使用鼠标滚动到下一页'; /* 设置伪元素的内容为 'test' */
+  position: absolute; /* 设置绝对定位 */
+  top: -20px; /* 相对于父元素上方位置 */
+  left: -30px; /* 相对于父元素左侧位置 */
+  white-space: nowrap; /* 防止内容换行 */
+  padding: 5px; /* 设置伪元素的内边距 */
+  background-color: #f0f0f0; /* 设置背景色 */
+  font-size: 12px; /* 设置字体大小 */
+  opacity: 0; /* 初始设置透明度为0 */
+  border-radius: 5px;
+  transition: all .5s; /* 添加过渡效果，过渡时间为1秒 */
+}
+
+.down:hover::after {
+  opacity: 1; /* 鼠标悬停时透明度变为1，触发过渡效果 */
+}
+@keyframes down{
+  0%{
+    bottom: 20px;
+  }
+  100%{
+    bottom: 0px;
+  }
+}
+
+
 .square-grid {
   display: flex;
   flex-wrap: wrap;
@@ -52,10 +91,9 @@ li {
 .block {
   width: 300px;
   padding: 20px;
-  background-image: linear-gradient(to right, rgba(255, 129, 119, 0.1) 0%, rgba(255, 134, 122, 0.1) 0%, rgba(255, 140, 127, 0.1) 21%, rgba(249, 145, 133, 0.1) 52%, rgba(207, 85, 108, 0.1) 78%, rgba(177, 42, 91, 0.1) 100%);
+  background-image: linear-gradient(to right, rgba(255, 129, 119, 0.5) 0%, rgba(255, 134, 122, 0.5) 0%, rgba(255, 140, 127, 0.5) 21%, rgba(249, 145, 133, 0.5) 52%, rgba(207, 85, 108, 0.5) 78%, rgba(177, 42, 91, 0.5) 100%);
   text-align: left;
   border-radius: 10px;
   border: 1px solid black;
   backdrop-filter: blur(50px);
 }
-
